# kmd

./: .gitignore  .skillignore  .yamllint.yaml  AGENTS.md  Makefile  README.md  cleanup-vault-test.sh  pyproject.toml  pyrightconfig.json  ruff.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.grok-plugin/: marketplace.json  plugin.json
agents/: kmd-intake.md  kmd-librarian.md  kmd-operator.md
codex/agents/: kmd-intake.toml  kmd-librarian.toml  kmd-operator.toml
docs/code-style/: README.md  workspace-packages.md
docs/code-style/python/: README.md  comments.md  imports.md  modules.md  python.md  testing-and-prs.md  tool-design.md
docs/code-style/typescript/: README.md  conventions.md  testing-and-tooling.md
hooks/: codex-hooks.json  cursor-hooks.json  hooks.json
hooks/scripts/: kb_guard.py  kb_post_write.py
installer/: README.md  biome.json  package.json
scripts/: bump_version.py
skills/kmd-ingest/: SKILL.md
skills/kmd-ingest/references/: schema-template.md
skills/kmd-ingest/scripts/: kb_log.py  recompile_index.py  validate_page.py
skills/kmd-lint/: SKILL.md
skills/kmd-lint/references/: org-extension.md
skills/kmd-lint/scripts/: kb_common.py  lint_mechanical.py
