[project]
name = "skills-dev"
version = "0.0.0"
description = "Development tooling for the skills repository — no runtime package; the skill scripts stay dependency-free."
requires-python = ">=3.12"

[tool.uv]
package = false

[dependency-groups]
dev = [
  "mypy",
  "black==26.1.0",
  "isort==7.0.0",
  "pytest>=8.2",
  "pyright>=1.1.408",
  "ruff>=0.14.14",
  "yamllint>=1.37.0",
  "vulture>=2.16",
]

[tool.mypy]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
